<resources>
    <string name="app_name">Aplikasi Form A</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="kebijakan_privasi">
        Aplikasi Pengisian Form A Bawaslu menghargai privasi dan keamanan data pengguna.
        Kebijakan privasi ini dirancang untuk menjelaskan bagaimana informasi pribadi dikumpulkan, digunakan, disimpan, dan dilindungi saat menggunakan aplikasi ini.

        \n\nKebijakan Privasi ini disertakan sebagai bagian dari ketentuan penggunaan. Kebijakan Privasi ini mencakup hal-hal sebagai berikut:
    </string>
    <string name="kebijakanprivasi1">1. Definisi
        \n2. Pengumpulan Informasi
        \n3. Penggunaan Informasi
        \n4. Perlindungan Data
        \n5. Hak Pengguna
        \n6. Pengakuan dan Persetujuan
        \n7. Perubahan Atas Kebijakan Privasi
        \n8. Cara untuk Menghubungi Kami

        </string>
    <string name="kebijakanprivasi2">Penggunaan atas aplikasi dan layanan tunduk pada ketentuan penggunaan dan Kebijakan Privasi ini dan mengindikasikan persetujuan terhadap ketentuan penggunaan dan Kebijakan Privasi tersebut.</string>
    <string name="kebijakanprivasi3">1. Aplikasi: Aplikasi Pengisian Form A Bawaslu yang digunakan untuk mengisi dan mengelola laporan pengawasan pemilu.
        \n2. Pengguna: Individu yang menggunakan aplikasi untuk keperluan pengisian form A.
        \n3. Data Pribadi: Informasi yang terkait dengan individu, seperti nama, alamat, data kontak, dan data terkait pengawasan pemilu yang dikumpulkan melalui aplikasi.
        \n4. Layanan: Fitur dan fungsi yang disediakan oleh aplikasi untuk pengisian form A dan pengelolaan data pengawasan.
</string>
    <string name="kebijakanprivasi4">
        1. Aplikasi ini mengumpulkan beberapa jenis informasi pribadi pengguna, termasuk namun tidak terbatas pada:
</string>
    <string name="kebijakanprivasi5">• Informasi Identitas: Nama lengkap, alamat, nomor telepon, alamat email.
        \n• Informasi Pengawasan: Data yang terkait dengan laporan pengawasan pemilu seperti tanggal, lokasi, dan kejadian.
        \n• Informasi Teknis: Data terkait perangkat yang digunakan, seperti alamat IP, jenis perangkat, dan sistem operasi.</string>
    <string name="kebijakanprivasi6">2. Informasi dikumpulkan secara otomatis melalui penggunaan aplikasi atau secara sukarela saat pengguna mengisi form atau mengunggah data.</string>
    <string name="kebijakanprivasi7">
        1. Data yang dikumpulkan akan digunakan untuk tujuan berikut:
        \n• Mengelola dan memproses form A sesuai dengan tugas pengawasan pemilu.
        \n• Menyediakan akses ke layanan aplikasi yang mendukung fungsi pengawasan pemilu.
        \n• Memastikan kepatuhan dengan hukum dan peraturan yang berlaku terkait pengawasan pemilu.
        \n• Melakukan analisis internal untuk meningkatkan fitur dan fungsionalitas aplikasi.
</string>
    <string name="kebijakanprivasi8">2. Aplikasi ini tidak akan menjual, menyewakan, atau membagikan data pribadi pengguna kepada pihak ketiga tanpa persetujuan pengguna, kecuali diwajibkan oleh hukum.</string>
    <string name="kebijakanprivasi9">1. Kami berkomitmen untuk melindungi data pengguna dengan menggunakan langkah-langkah keamanan teknis dan organisasi, termasuk enkripsi data dan akses terbatas ke informasi pribadi.
\n2. Data yang dikumpulkan akan disimpan dalam lingkungan yang aman untuk mencegah akses, perubahan, pengungkapan, atau perusakan oleh pihak yang tidak berwenang.
\n3. Namun, pengguna juga harus memahami bahwa tidak ada sistem yang dapat sepenuhnya melindungi dari ancaman keamanan siber, dan pengguna bertanggung jawab untuk menjaga kerahasiaan informasi login.</string>
    <string name="kebijakanprivasi10">
        Pengguna memiliki hak terkait data pribadi mereka:
        \n• Hak Akses: Pengguna dapat meminta salinan informasi pribadi yang dikumpulkan oleh aplikasi.
        \n• Hak Perbaikan: Pengguna dapat memperbaiki atau memperbarui informasi pribadi yang tidak akurat.
        \n• Hak Penghapusan: Pengguna dapat meminta penghapusan data pribadi mereka dari aplikasi, dengan tunduk pada ketentuan hukum yang berlaku.
        \n• Hak Keberatan: Pengguna dapat menolak penggunaan data pribadi untuk tujuan tertentu, seperti pemasaran.</string>
    <string name="kebijakanprivasi11">1. Dengan menggunakan aplikasi ini, pengguna menyetujui kebijakan privasi ini dan memberikan persetujuan terhadap pengumpulan, penggunaan, dan pemrosesan informasi pribadi mereka sesuai dengan kebijakan yang dijelaskan di atas.
\n2. Jika pengguna tidak setuju dengan kebijakan ini, disarankan untuk tidak menggunakan aplikasi.</string>
    <string name="kebijakanprivasi12">1. Kami berhak untuk memperbarui kebijakan privasi ini dari waktu ke waktu guna mencerminkan perubahan pada praktik layanan atau hukum yang berlaku.
\n2. Setiap perubahan yang signifikan akan diberitahukan melalui aplikasi atau email yang terdaftar oleh pengguna. Pengguna diimbau untuk secara berkala meninjau kebijakan privasi ini untuk mengetahui perubahan terbaru.</string>
    <string name="kebijakanprivasi13">Jika ada pertanyaan, keluhan, atau permintaan terkait kebijakan privasi, pengguna dapat menghubungi kami melalui email:

        \n\nEmail: leovanderadds@gmail.com

        \n\nKami akan berusaha menanggapi setiap permintaan atau keluhan secepat mungkin.</string>
    <string name="tentangkami">Aplikasi Pengisian Form Model A Bawaslu merupakan hasil kerja sama strategis antara Mahasiswa Politeknik Negeri Jember, tim mahasiswa yang penuh inovasi, dan Bawaslu Kota Batu, sebuah lembaga independen yang bertugas mengawasi pemilu di Indonesia. Kolaborasi ini terbentuk dengan tujuan menciptakan solusi teknologi yang memudahkan proses pengawasan dan pelaporan pelanggaran pemilu, yang sebelumnya dilakukan secara manual, menjadi lebih efisien dan terstruktur melalui platform digital.</string>
    <string name="tentangkami1">Kami berkomitmen untuk menghadirkan alat yang tangguh, aman, dan mudah digunakan oleh petugas Bawaslu di lapangan. Tujuan kami adalah memastikan proses pelaporan kejadian pemilu menjadi lebih akurat, transparan, dan cepat. Kami fokus pada pengembangan teknologi yang dapat diakses di berbagai perangkat, mendukung pelaksanaan pemilu yang bersih, adil, dan demokratis di wilayah Kota Batu.</string>
    <string name="tentangkami2">Pengembangan aplikasi ini adalah hasil dari kolaborasi antara mahasiswa yang tergabung dalam tim Kaftapus Srigala Asia dan Bawaslu Kota Batu. Tim mahasiswa kami terdiri dari individu yang memiliki latar belakang dalam bidang teknologi informasi, desain antarmuka, dan manajemen proyek. Dengan pengawasan dari Bawaslu dan pemahaman akan kebutuhan operasional pengawasan pemilu, aplikasi ini dirancang untuk memenuhi standar keamanan dan fungsionalitas yang tinggi, sekaligus memastikan kesesuaian dengan prosedur pemilu.</string>
    <string name="tentangkami3">Sebagai lembaga negara yang memiliki tugas utama mengawasi jalannya pemilu di Kota Batu, Bawaslu bertanggung jawab untuk menjaga transparansi, kejujuran, dan keadilan dalam proses pemilihan umum. Dalam menghadapi tantangan era digital, Bawaslu menyadari pentingnya modernisasi dalam pengelolaan pengawasan pemilu. Oleh karena itu, kerja sama dengan tim mahasiswa ini menjadi langkah strategis dalam menciptakan aplikasi yang tidak hanya relevan dengan kondisi lapangan, tetapi juga siap menghadapi perkembangan teknologi ke depannya.</string>
    <string name="tentangkami5">Kami terus berkomitmen untuk memperbarui dan menyempurnakan aplikasi ini dengan fitur-fitur baru,  serta peningkatan keamanan data pengguna untuk memastikan aplikasi tetap relevan dengan kebutuhan di lapangan. Melalui pengembangan yang berkelanjutan, kami berharap aplikasi ini dapat menjadi platform utama dalam mendukung Bawaslu menjalankan tugasnya dengan lebih baik, tidak hanya di Kota Batu tetapi juga di wilayah lain yang membutuhkan solusi serupa.
        \n\nDengan dedikasi yang kuat dan semangat untuk memberikan kontribusi nyata dalam pelaksanaan pemilu yang lebih baik, Kaftapus Srigala Asia dan Bawaslu Kota Batu bangga untuk mempersembahkan aplikasi ini sebagai bagian dari upaya bersama menuju demokrasi yang lebih maju.</string>
    <string name="tentangkami6">1. Supriyanto, S.Pd (Ketua BAWASLU)
\n2. Yogi Eka Chalid Farobi, S.Sos (Anggota BAWASLU)
\n3. Mardiono, S.HI., M.H (Anggota BAWASLU)
\n4. Rani Purbaningtyas, S.Kom., MT (Koordinator Program Studi POLIJE)</string>
    <string name="tentangkami8">1. Dwi Kusharianti, S.H (Kepala Sub Bagian BAWASLU)
\n2. Joko Sulistiyo, S.AP (Kepala Sub Bagian BAWASLU)
\n3. Ahmad Fahriyannur Rosyady, S.Kom., M.MT (Pembimbing Magang POLIJE)</string>
    <string name="tentangkami9">1. Leovander Aditama (Mahasiswa POLIJE)
\n2. Tegar Alam Qushoyyi (Mahasiswa POLIJE)
\n3. Abhinaya Fahar Laila (Mahasiswa POLIJE)
\n4. .Hagi Grandhito Priambodo, S.AP (Staf Pelaksana BAWASLU)
\n5. Ismail Faruqi, S.P (Staf Pelaksana BAWASLU)</string>
</resources>