<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KebijakanPrivasi">

    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bgframee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Back Button -->
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/tvkebijakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kebijakan Privasi"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/white_frame"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:background="@android:color/white"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvkebijakan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

            <!-- ScrollView for Long Text -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|top"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/kebijakan_privasi"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi1"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi2"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1. Definisi"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi3"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2. Pengumpulan Informasi"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi4"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_marginLeft="11dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi5"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi6"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3. Penggunaan Informasi"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi7"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi8"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4. Perlindungan Data"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi9"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5. Hak Pengguna"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi10"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6. Pengakuan dan Persetujuan"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi11"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="7. Perubahan Atas Kebijakan Privasi"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi12"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cara untuk Menghubungi Kami"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="12sp"/>
                    
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kebijakanprivasi13"
                        android:fontFamily="@font/poppins"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
